update hw2